<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_at_one_item">Please, select at least one item to enter multiview mode.</string>
    <string name="file">file</string>
    <string name="max_chosen_item">4 chosen items are the maximum for multiview mode</string>
    <string name="app_name">RTSP Player</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_send_log">Send log</string>
    <string name="action_exit">Exit</string>
    <string name="help_url">http://videoexpertsgroup.com/rtspplayer/help.html</string>
    <string name="dialog_title">Add stream</string>
    
    <string name="main_cameras_empty_list">No cameras\nTap Refresh to download cameras\nAll links in current list are for test purpose only</string>
    <string name="main_streams_empty_list">No cameras\nTap \"+\" to add camera</string>
    <string name="main_empty_list">No cameras\nTap \"+\" to add camera</string>
    
    <string name="action_bar_play">Play</string>
    <string name="action_bar_add">New stream</string>
    <string name="action_bar_edit">Edit</string>
    <string name="action_bar_delete">Delete mode</string>
    <string name="action_bar_cancel_delete">Cancel delete mode</string>
    
    <string name="dialog_name">Name:</string>
    <string name="dialog_name_hint">enter stream name:</string>
    <string name="dialog_type">Stream type:</string>
    <string name="dialog_chb1">CheckBox1</string>
    <string name="dialog_chb2">CheckBox2</string>
    <string name="dialog_chb3">CheckBox3</string>
    <string name="dialog_url">URL:</string>
    <string name="dialog_url_hint">enter URL:</string>
    <string name="dialog_user">User:</string>
    <string name="dialog_password">Password:</string>
    <string name="dialog_preview">Preview: (tap to take snapshot)</string>
    <string name="dialog_save">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_preview_first">Tap for preview</string>
    <string name="dialog_preview_snapshot">Tap to take snapshot</string>

    <string name="dialog_exit_message">Are you sure to exit?</string>
    <string name="dialog_exit_yes">Yes</string>
    <string name="dialog_exit_no">No</string>

    <string name="dialog_autostart_message">Do you wish to resume playback from last stream?</string>
    <string name="dialog_autostart_yes">Yes</string>
    <string name="dialog_autostart_no">No</string>

    <string name="dialog_delete_channel">Are you sure delete channel</string>
    <string name="dialog_hide_preview_video">Close Preview ? Please use Setting/Show Preview to enable/disable Preview.</string>
    
    <string name="dialog_url_exist_message">There is item in list with same URL, Add new item?</string>
    <string name="dialog_url_exist_yes">Yes</string>
    <string name="dialog_url_exist_no">No</string>
    
    <string name="player_control_decoder_hw">HW</string>
    <string name="player_control_decoder_sw">SW</string>
    
    <string name="tab_name_files">Records</string>
    <string name="tab_name_streams">My Cams</string>
    <string name="tab_name_cameras">World Cams</string>
    
    <string name="download_cameras_title">Downloading&#8230;</string>
    <string name="download_cameras_message">Please wait, Cameras list has been downloading </string>
    <string name="download_cameras_cancel">Cancel</string>
    
    <string name="storage_thumbs">thumbs</string>
    
    <string name="numberpicker_but_save">Save</string>

    <string-array name="channel_type_array">
        <item>type one</item>
        <item>type two</item>
        <item>type three</item>
        <item>type four</item>
        <item>type five</item>
    </string-array>
    <string name="item_thumb">item_thumb</string>
    
    
</resources>
