<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

		    <ImageView
		        android:id="@+id/dialog_img_ico"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginLeft="10dp"
		        android:adjustViewBounds="true"
		        android:scaleType="centerInside"
		        android:src="@drawable/pl" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/dialog_name"
                android:paddingLeft="@dimen/dialog_left_padding"
                android:textSize="@dimen/textSmall" 
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/dialog_ed_name"
                android:paddingLeft="@dimen/view_grid_item_padding_left"
                android:paddingRight="@dimen/dialog_right_padding"
                android:layout_width="0dp"
                android:layout_weight="1"
				android:singleLine="true"
				android:maxLength="50"
                android:layout_height="wrap_content" />
        </TableRow>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_divider_height"
            android:background="#FFCD0000" />

<!--         <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
 -->
<!--             <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dialog_url"
                android:paddingLeft="@dimen/dialog_left_padding"
                android:textSize="@dimen/textSmall" />
 -->
            <EditText
                android:id="@+id/dialog_ed_url"
                android:hint="@string/dialog_url"
                android:paddingLeft="@dimen/view_grid_item_padding_left"
                android:layout_width="match_parent"
                android:paddingRight="@dimen/dialog_right_padding"
                android:layout_weight="1"
				android:singleLine="true"
                android:layout_height="wrap_content" />
<!--         </TableRow>
 -->
<!--         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_preview"
            android:textSize="@dimen/textSmall"
            android:layout_gravity="center_horizontal" />
 -->
<!--         <ImageView
            android:id="@+id/dialog_imv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:adjustViewBounds="true" />
 -->        
 
 		<FrameLayout
        	android:id="@+id/playerViewLayout"
        	android:layout_width="match_parent"
        	android:layout_height="200dp"
        	>

			<FrameLayout
			    android:id="@+id/playerViewPreviewContainer"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
		   		android:layout_gravity="center"
            	android:paddingLeft="20dp"
            	android:paddingRight="20dp" >
				
			   	<veg.mediaplayer.sdk.MediaPlayer
			       	android:id="@+id/playerViewPreview"
			        android:layout_width="fill_parent"
			   	    android:layout_height="fill_parent" />
			   	
				<ProgressBar
				   	style="?android:attr/progressBarStyleLarge"
				    android:id="@+id/layout_hide_progress"
				   	android:layout_width="wrap_content"
				   	android:layout_height="wrap_content"
				   	android:visibility="visible"
					android:layout_gravity="center" />
			
				<ImageView
				    android:id="@+id/pic_status_disconnected"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center"
				    android:adjustViewBounds="true"
				    android:scaleType="centerInside"
				    android:src="@drawable/status_disconnected_scaled" />
			</FrameLayout>  
 		    		    
<!--         	<veg.mediaplayer.sdk.MediaPlayer
        		android:id="@+id/playerViewPreview"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:paddingLeft="20dp"
            	android:paddingRight="20dp"
            	android:scaleType="centerCrop"
            	android:layout_gravity="center"
            	android:adjustViewBounds="true" />
 -->        	
   		    <ImageButton
   		        android:id="@+id/dialog_imv_preview"
   		        android:layout_width="120dp"
   		        android:layout_height="100dp"
   		        android:layout_marginLeft="10dp"
   		        android:layout_marginTop="20dp"
   		        android:adjustViewBounds="true"
   		        android:clickable="false"
   		        android:scaleType="centerInside" />
   		    
   		    <TextView
   		        android:id="@+id/dialog_status_preview"
   		        android:layout_width="wrap_content"
   		        android:layout_height="wrap_content"
   		        android:layout_gravity="center_horizontal"
   		        android:paddingTop="5dp"
   		        android:shadowColor="#FF006181"
   		        android:shadowDx="2"
   		        android:shadowDy="2"
   		        android:shadowRadius="3"
   		        android:text="@string/dialog_preview_first"
   		        android:textColor="#FFFFFF"
   		        android:textSize="@dimen/textSmall"
   		        android:textStyle="bold" />
   		    
<!--    		    <ProgressBar
        		style="?android:attr/progressBarStyleLarge"
	        	android:id="@+id/layout_hide_progress"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:visibility="invisible"
   				android:layout_gravity="center"
        		/>
 -->         		
<!--     		android:shadowColor="#FFCD0000"
   		        android:shadowDx="1"
   		        android:shadowDy="1"
   		        android:shadowRadius="1"
 -->  		        
 
        </FrameLayout>

<!--         <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dialog_but_negative"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel"
                android:textSize="@dimen/textSmall" />

            <Button
                android:id="@+id/dialog_but_positive"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dialog_save"
                android:textSize="@dimen/textSmall" />
        </TableRow>
 -->        
        <LinearLayout style="?android:attr/buttonBarStyle"
        	android:layout_width="match_parent" android:layout_height="wrap_content"
        	android:measureWithLargestChild="true">
        	<Button style="?android:attr/buttonBarButtonStyle" 
                android:id="@+id/dialog_but_negative"
            	android:layout_width="wrap_content" android:layout_height="wrap_content"
            	android:layout_weight="1"
           		android:text="@string/dialog_cancel" />
        	<Button style="?android:attr/buttonBarButtonStyle" 
                android:id="@+id/dialog_but_positive"
            	android:layout_width="wrap_content" android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:text="@string/dialog_save" />
    	</LinearLayout>
        

    </LinearLayout>
</ScrollView>